# anygen

./: .env.example  .gitignore  AGENTS.md  AI.md  AI_latest_innovations.md  CLAUDE.md  GEMINI.md  INSTALL.md  README.md  RECIPES.md  pyproject.toml
.claude/agents/: bdd-features.md  env-manager.md  tdd-code.md  tdd-refactor.md  tdd-test.md
.github/: copilot-instructions.md
.github/workflows/: codev-tests.yml
codev-skeleton/.claude/agents/: architecture-documenter.md  codev-updater.md  spider-protocol-updater.md
codev-skeleton/protocols/spider-solo/: protocol.md
codev-skeleton/protocols/spider/templates/: plan.md  review.md  spec.md
codev-skeleton/protocols/tick/: protocol.md
codev/plans/: 0001-test-infrastructure.md
codev/protocols/spider/: protocol.md
codev/protocols/spider-solo/templates/: plan.md  review.md  spec.md
codev/resources/: project.md
codev/reviews/: 0001-test-infrastructure.md
codev/specs/: 0001-test-infrastructure.md
docs/: HOW_TO_USE_CODEV.md
features/: codev_installation.feature  environment.py  spider_protocol.feature  zen_mcp_integration.feature
features/steps/: codev_installation_steps.py  spider_protocol_steps.py  zen_mcp_steps.py
scripts/: install-zen-mcp.sh  run-behave-tests.sh
