[project]
name = "codev-tests"
version = "0.1.0"
description = "BDD tests for Codev framework using behave"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Codev Contributors", email = "contributors@example.com" }
]
keywords = ["codev", "testing", "bdd", "behave", "ai-development"]

dependencies = [
    "behave>=1.2.6",
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["features"]

[tool.behave]
format = ["progress", "pretty"]
junit = true
junit_directory = "test-reports"
show_skipped = true
show_timings = true
color = true

[tool.behave.userdata]
lang = "ru"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=tests --cov-report=html --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
